--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "alwaysStrict": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
